--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,14 @@ body {
 
 .color-out {
   width: 200px;
-  height: 50px;
+  height: auto;
   box-sizing: border-box;
-  text-align: center;
+
   padding: 8px;
   margin: auto;
   border: 1px solid;
+
+  text-align: center;
   font-size: 20px;
+  font-weight: bold;
 }
